--- a/src/main/resources/static/info/info.html
+++ b/src/main/resources/static/info/info.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Info</title>
 </head>
 <body>
-$END$
+  <h1>Das ist eine Info!</h1>
 </body>
 </html>
